@@ -3,6 +3,8 @@
 Revision history for Data::ObjectDriver
 
 0.04_XX
+    - Fixed a bug where single-PK classes where not returning the
+      objects correctly sorted during a lookup_multi.
     - Added has_a() construct to build linking methods between classes.
     - remove() returns number of affected rows, with DBI semantics.
     - Bulk inserting of data can now be done with the new bulk_insert()
